--- a/plugins/my-first-block/src/style.scss
+++ b/plugins/my-first-block/src/style.scss
@@ -6,7 +6,13 @@
  */
 
 .wp-block-create-block-my-first-block {
-	background-color: #21759b;
-	color: #fff;
-	padding: 2px;
+	&.is-style-default{
+		border: 0;
+        background-color: #FFE2C7;
+	}
+	&.is-style-border{
+		border: 2px solid #000;
+        border-radius: 8px;
+        background-color: #F6F6F6;
+	}
 }
